# mandelbrot

./: Cargo.toml
src/: compute.rs  demo.rs  info.rs  main.rs  ocl3.rs
