[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.7"
sdl2 = { version = "0.36.0" }

[profile.mandel]
inherits = "release"
overflow-checks = true
opt-level = 1
